--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "react-alice-carousel": "^1.19.3",
     "react-cookie": "4.0.1",
     "store": "2.0.12",
     "webpack": "^4.23.1",
