--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "engines": {
     "node": "^8.10",
     "npm": "^5.8"
+  },
+  "devDependencies": {
+    "react-alice-carousel": "^1.19.3"
   }
 }
