--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "node-sass": "4.13.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "react-router-dom": "5.1.2",
     "react-window": "1.8.5",
     "sass-loader": "7.2.0",
