--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "material-table": "1.55.0",
     "node-sass": "4.13.1",
     "react": "16.8.6",
+    "react-button-component": "^1.0.0",
     "react-dom": "16.8.6",
     "react-grid-gallery": "^0.5.5",
     "react-router-dom": "5.1.2",
