--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
     "lodash": "4.17.14",
     "material-table": "1.55.0",
     "node-sass": "4.13.1",
-    "react": "16.8.6",
+    "react": "^16.13.1",
     "react-button-component": "^1.0.0",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.13.1",
     "react-grid-gallery": "^0.5.5",
+    "react-responsive-modal": "^5.0.2",
     "react-router-dom": "5.1.2",
     "react-window": "1.8.5",
     "sass-loader": "7.2.0",
