--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.2.0",
     "mongodb": "^3.0.4",
     "morgan": "~1.9.0",
+    "react-responsive-modal": "^5.0.2",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.4.5",
