--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-responsive-modal": "^5.0.2",
     "react-router-dom": "5.1.2",
     "react-window": "1.8.5",
+    "react-youtube": "^7.11.3",
     "sass-loader": "7.2.0",
     "sass-resources-loader": "2.0.1",
     "style-loader": "1.1.3"
