--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parse": "^2.1.0",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
+    "ejs": "^3.1.5",
     "express": "~4.15.5",
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
