--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "dependencies": {
     "@babel/preset-react": "7.8.3",
+    "@ionic-native/barcode-scanner": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/social-sharing": "^5.28.0",
     "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.5.1",
     "classnames": "^2.2.6",
+    "cordova-plugin-x-socialsharing": "^6.0.1",
     "css-loader": "3.4.2",
     "es6-promise": "4.2.4",
     "lodash": "4.17.14",
     "material-table": "1.55.0",
     "node-sass": "4.13.1",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "react": "^16.13.1",
     "react-button-component": "^1.0.0",
     "react-dom": "^16.13.1",
